--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,20 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AppController!{% endblock %}
+{% block title %}Boutique{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="allProduct">
+        {% for product in products %}
+            <div class="product">
+                <h2>{{ product.name }}</h2>
+                <img src="{{ product.imageUrl }}" alt="image" width="200" height="200">
+                <p>{{ product.price }}0 €</p>
+                <p>Il reste {{ product.stock }} produits</p>
+                <a href="{{ path('app_info_product', {'id': product.id})  }}" class="linkProduct">Voir le produit</a>
+            </div>
+        {% endfor %}
+    </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/symfony_rendu/src/Controller/AppController.php'|file_link(0) }}">src/Controller/AppController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/symfony_rendu/templates/app/index.html.twig'|file_link(0) }}">templates/app/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
