--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link href="style.css" rel="stylesheet">
+
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -14,17 +16,20 @@
         {% endblock %}
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="{{ path('app_logout') }}">Se déconnecter</a></li>
+                {%  if not app.user %}
+                    <li><a href="{{ path('app_login') }}">Se connecter</a></li>
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li><a href="admin">Page admin</a></li>
+                {% endif %}
+            </ul>
+        </nav>
         {% block body %}
         {% endblock %}
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h1>My first Symfony app</h1>
-                    <p>Now that you have successfully installed Symfony, you can start working on your new app in the <code>src/Controller/DefaultController.php</code> file.</p>
-                    <p>You can also find the Twig template that renders this content in the <code>templates/default/index.html.twig</code> file.</p>
-                    <p>Read the documentation at <a href="https://symfony.com/doc">symfony.com/doc</a>.</p>
-                </div>
-            </div>
-        </div>
+
     </body>
 </html>
