--- a/public/style.css
+++ b/public/style.css
@@ -45,3 +45,32 @@ a {
     text-decoration: none;
     color: black;
 }
+
+/*Form login*/
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+form input{
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid black;
+}
+
+form button{
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid black;
+    background-color: #333;
+    color: #fff;
+}
+
+.register{
+    color: black;
+}
+
